--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Password Generator</title>
 </head>
 <body>
     <div class="wrapper">
         <header>
-            <h1>Password Generator</h1>
+            <h1></h1>
         </header>
         <div class="card">
             <div class="card-header">
                 <h2>Generate a Password</h2>
             </div>
             <div class="card-body">
-                <textarea readonly id="password" placeholder="Your Secure Password"
+                <textarea readonly id="password" placeholder="Password"
                     aria-label="Generated Password"></textarea>
             </div>
             <div class="card-footer">
-                <button id="generate" class="btn">Generate Password</button>
+                <button id="generate" class="btn">Click to start!</button>
             </div>
         </div>
     </div>
