add new countDown function that will create a label tag and a progressBar, will add coundown functionality soon

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <body>
     <main class="wrapper">   
         <section class="card">
-            <header class="card-header">
-                <label for="pwd">Time reminder:</label>
-                <progress id="pwd" value="2" max="10"></progress>
+            <header class="card-header" id="counter">
+                <!-- <label for="pwd">Time reminder:</label>
+                <progress id="pwd" value="2" max="10"></progress> -->
                 <h1>Generate a Password</h1>
             </header>
             
