--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
 <body>
     <main class="wrapper">   
         <section class="card">
-            <header class="card-header" id="counter">
+            <header class="card-header">
                 <!-- <label for="pwd">Time reminder:</label>
                 <progress id="pwd" value="2" max="10"></progress> -->
                 <h1>Generate a Password</h1>
+                <h2 id="counter"></h2>
             </header>
             
             <div class="card-body">
