--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
     <link rel="manifest" href="/favicon_io/site.webmanifest">
     <script src="https://kit.fontawesome.com/291451fd76.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" />
     <title>Create a Password</title>
 </head>
 <body>
-    <main class="wrapper">   
+    <main class="container">   
         <section class="card">
             <header class="card-header">
                 <!-- <label for="pwd">Time reminder:</label>
