--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             
             <footer class="card-footer">
                 <button id="generate" class="btn">Click to start!</button>
+                <button id="reset" class="btn">Reset</button>
             </footer>
             
             <p><i class="fab fa-angellist fa-2x"></i></p>
