--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     <script src="https://kit.fontawesome.com/291451fd76.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-
     <link rel="stylesheet" href="bootstrap.css" />
+    <link rel="stylesheet" href="style.css" />
+    
     <title>CR3@+e A p@$$W0rd</title>
 </head>
 <body>
-    <main class="container jumbotron text-center">   
+    <main class="bg-dark container jumbotron text-center">   
         <header class="">
                 <h1 class="display-3">CR3@+e A p@$$W0rd</h1>
                 <h2 id="counter"></h2>
@@ -26,7 +27,7 @@
             <div class="">
                 <textarea class="text-center" readonly id="password" placeholder="Password" aria-label="Generated Password" rows="1" cols="50"></textarea>
                 <div class="my-3 custom-control custom-switch">
-                    <input type="checkbox" class="custom-control-input" id="customSwitch1" checked="">
+                    <input type="checkbox" class="custom-control-input" id="customSwitch1">
                     <label class="custom-control-label" for="customSwitch1">Toggle this switch element</label>
                 </div
             </div>
