--- a/index.html
+++ b/index.html
@@ -26,15 +26,13 @@
         <section class="text-center">
             <div class="">
                 <textarea class="text-center" readonly id="password" placeholder="Password" aria-label="Generated Password" rows="1" cols="50"></textarea>
-                <div id="toggles" class="custom-control custom-switch">
+                <div class="my-3 custom-control custom-switch">
                     <input type="checkbox" class="custom-control-input" id="customSwitch1">
                     <label class="custom-control-label" for="customSwitch1">UPPER CASE?</label>
-                
-                    <input type="checkbox" class="custom-control-input" id="customSwitch2">
-                    <label class="custom-control-label" for="customSwitch2">lower case?</label>
                 </div>
                 <div class="my-3 custom-control custom-switch">
-                    
+                    <input type="checkbox" class="custom-control-input" id="customSwitch2">
+                    <label class="custom-control-label" for="customSwitch2">lower case?</label>
                 </div>
             </div>
         </section>
