--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
         <section class="text-center">
             <div class="">
                 <textarea class="text-center" readonly id="password" placeholder="Password" aria-label="Generated Password" rows="1" cols="50"></textarea>
+                
+                <fieldset class="form-group">
+                    <p id="sliderCounter">Value: </p>
+                    <label for="customRange1">How many characters?</label>
+                    <input type="range" class="custom-range" id="customRange1" min="8" max="30" value="8">
+                </fieldset>
+                
                 <div class="my-3 custom-control custom-switch">
                     <input type="checkbox" class="custom-control-input" id="customSwitch1">
                     <label class="custom-control-label" for="customSwitch1">UPPER CASE?</label>
@@ -33,6 +40,14 @@
                 <div class="my-3 custom-control custom-switch">
                     <input type="checkbox" class="custom-control-input" id="customSwitch2">
                     <label class="custom-control-label" for="customSwitch2">lower case?</label>
+                </div>
+                <div class="my-3 custom-control custom-switch">
+                    <input type="checkbox" class="custom-control-input" id="customSwitch3">
+                    <label class="custom-control-label" for="customSwitch3">123?</label>
+                </div>
+                <div class="my-3 custom-control custom-switch">
+                    <input type="checkbox" class="custom-control-input" id="customSwitch4">
+                    <label class="custom-control-label" for="customSwitch4">symbols?</label>
                 </div>
             </div>
         </section>
