function to password value with toggle and slider are working

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 
                 <fieldset class="form-group">
                     <p id="sliderCounter">Value: </p>
-                    <label for="customRange1">How many characters?</label>
+                    <label for="customRange1">Use slider to pick number of characters?</label>
                     <input type="range" class="custom-range" id="customRange1" min="8" max="30" value="8">
                 </fieldset>
                 
