--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <textarea class="text-center" readonly id="password" placeholder="Password" aria-label="Generated Password" rows="1" cols="50"></textarea>
                 
                 <fieldset class="form-group">
-                    <p id="sliderCounter">Value: </p>
+                    <p>Characters: <span id="sliderCounter"></span></p>
                     <label for="customRange1">Use slider to pick number of characters?</label>
                     <input type="range" class="custom-range" id="customRange1" min="8" max="30" value="8">
                 </fieldset>
