textarea responsive settings

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         
         <section class="text-center">
             <div class="">
-                <textarea class="text-center" readonly id="password" placeholder="Password" aria-label="Generated Password" rows="1" cols="50"></textarea>
+                <textarea class="text-center" readonly id="password" placeholder="Password" aria-label="Generated Password"></textarea>
                 
                 <fieldset>
                     <p>Num of characters: <span id="sliderCounter"></span></p>
