change background and remove textarea for p tag instead to show password

--- a/index.html
+++ b/index.html
@@ -17,16 +17,15 @@
     <title>CR3@+e A p@$$W0rd</title>
 </head>
 <body>
-    <main class="bg-dark container jumbotron text-center">   
+    <main class="bg-info container jumbotron text-center">   
         <header class="">
                 <h1 class="display-3">CR3@+e A p@$$W0rd</h1>
-                <h2 id="counter"></h2>
         </header>
         
         <section class="text-center">
             <div class="">
-                <textarea class="text-center" readonly id="password" placeholder="Password" aria-label="Generated Password" cols="30"></textarea>
-                
+                <p class="text-center" readonly id="password" placeholder="Password" aria-label="Generated Password" cols="30"></p>
+                <h2 id="counter"></h2>
                 <fieldset>
                     <p>Num of characters: <span id="sliderCounter"></span></p>
                     <label for="customRange1">Use slider to pick number of characters?</label>
