added container to body to better mobile screen responsive

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     
     <title>CR3@+e A p@$$W0rd</title>
 </head>
-<body>
-    <main class="bg-info container jumbotron text-center">   
+<body class="container">
+    <main class="m-3 bg-info jumbotron text-center">   
         <header class="">
                 <h1 class="display-3">CR3@+e A p@$$W0rd</h1>
         </header>
