--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 <body class="container">
     <main class="m-3 bg-info jumbotron text-center">   
         <header class="">
-                <h1 class="display-3">CR3@+e A p@$$W0rd</h1>
+                <h1 class="display-4">CR3@+e A p@$$W0rd</h1>
         </header>
         
         <section class="text-center">
             <div class="">
-                <p class="text-center" readonly id="password" placeholder="Password" aria-label="Generated Password" cols="30"></p>
+                <p class="text-center" readonly id="password" placeholder="Password" aria-label="Generated Password"></p>
                 <h2 id="counter"></h2>
                 <fieldset>
                     <p>Num of characters: <span id="sliderCounter"></span></p>
@@ -33,21 +33,21 @@
                 </fieldset>
             </div>
             <div class="row justify-content-center">
-                <div class="col-sm-3 custom-control custom-switch">
+                <div class="col-sm-12 col-md-3 custom-control custom-switch">
                     <input type="checkbox" class="custom-control-input" id="customSwitch1">
-                    <label class="custom-control-label" for="customSwitch1">UPPER CASE?</label>
+                    <label class="custom-control-label" for="customSwitch1">ABC?</label>
                 </div>
-                <div class="col-sm-3 custom-control custom-switch">
+                <div class="col-sm-12 col-md-3 custom-control custom-switch">
                     <input type="checkbox" class="custom-control-input" id="customSwitch2">
-                    <label class="custom-control-label" for="customSwitch2">lower case?</label>
+                    <label class="custom-control-label" for="customSwitch2">abc?</label>
                 </div>
-                <div class="col-sm-3 custom-control custom-switch">
+                <div class="col-sm-12 col-md-3 custom-control custom-switch">
                     <input type="checkbox" class="custom-control-input" id="customSwitch3">
                     <label class="custom-control-label" for="customSwitch3">123?</label>
                 </div>
-                <div class="col-sm-3 custom-control custom-switch">
+                <div class="col-sm-12 col-md-3 custom-control custom-switch">
                     <input type="checkbox" class="custom-control-input" id="customSwitch4">
-                    <label class="custom-control-label" for="customSwitch4">symbols?</label>
+                    <label class="custom-control-label" for="customSwitch4">!@#$%?</label>
                 </div>
             </div>
         </section>
