--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="bootstrap.css" />
     <link rel="stylesheet" href="style.css" />
     
-    <title>CR3@+e A p@$$W0rd</title>
+    <title>Password Portal</title>
 </head>
 <body class="container">
     <main class="m-3 bg-info jumbotron text-center">   
@@ -25,6 +25,7 @@
         <section class="text-center">
             <div class="">
                 <p class="text-center" readonly id="password" placeholder="Password" aria-label="Generated Password"></p>
+                <p class="hsimp"></p>
                 <h2 id="counter"></h2>
                 <fieldset>
                     <p>Num of characters: <span id="sliderCounter"></span></p>
@@ -61,7 +62,8 @@
             <p class="text-left"><i class="fab fa-angellist fa-2x"></i></p>
         </footer>
             
-    </main> 
+    </main>
+    <script src="hsimp.min.js"></script> 
     <script src="script.js"></script>
 </body>
 </html>
