--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <script src="https://kit.fontawesome.com/291451fd76.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <link rel="stylesheet" href="bootstrap.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/style/bootstrap.css" />
+    <link rel="stylesheet" href="/style/style.css" />
     
     <title>Password Portal</title>
 </head>
@@ -63,7 +63,7 @@
         </footer>
             
     </main>
-    <script src="hsimp.min.js"></script> 
-    <script src="script.js"></script>
+    <script src="./JS/hsimp.min.js"></script> 
+    <script src="./JS/script.js"></script>
 </body>
 </html>
