enabled netlify, badges

--- a/index.html
+++ b/index.html
@@ -58,10 +58,9 @@
             <button type="button" id="reset" class="btn btn-primary btn-sm btn-warning">Reset</button>
         </div>
 
-        <footer class="">  
+        <footer>  
             <p class="text-left"><i class="fab fa-angellist fa-2x"></i></p>
         </footer>
-            
     </main>
     <script src="./JS/hsimp.min.js"></script> 
     <script src="./JS/script.js"></script>
