Web re-structuring to meet PWA pattern

--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="favicon_io/site.webmanifest">    
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/image/icons/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/image/icons/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/image/icons/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="assets/image/icons/favicon_io/site.webmanifest">    
     <script src="https://kit.fontawesome.com/291451fd76.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="style/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="style/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/style/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="assets/style/style.css">
     
     <title>Password Portal</title>
 </head>
@@ -72,8 +72,8 @@
 
     </main>
     <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
-    <script src="./JS/hsimp.min.js"></script> 
-    <script src="./JS/script.js"></script>
+    <script src="assets/JS/hsimp.min.js"></script> 
+    <script src="assets/JS/script.js"></script>
 </body>
 </html>
 
