--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </section>
         
         <div class="row justify-content-center">
-            <button type="button" id="generate" class="btn btn-primary">Click to start!</button>
+            <button type="button" id="generate" class="btn btn-primary">Create password!</button>
             <button type="button" id="reset" class="btn btn-primary btn-sm btn-warning">Reset</button>
         </div>
 
